<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Fragments.LoginFragment"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingLeft="20dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".Fragments.LoginFragment">

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/server_host" />
                <EditText
                    android:id="@+id/server_host"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="10.37.113.131"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/server_port" />
                <EditText
                    android:id="@+id/server_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="8080"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"/>
                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="sheila"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"/>
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="1234"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"/>
                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Sheila"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"/>
                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Parker"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"/>
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="s_parker@gmail.com"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:paddingTop="11dp"/>
                <RadioGroup
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:checked="true"
                        android:text="@string/male"/>
                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/female"/>

                </RadioGroup>
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:enabled="false"
                    android:text="@string/sign_in"/>
                <Button
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:enabled="false"
                    android:text="@string/register"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>
</ScrollView>